<resources>
    <string name="app_name">Perionica Despot</string>
    <string name="title">Auto Perionica Despot</string>
    <string name="novo_pranje_btn">Novo pranje</string>
    <string name="lista_pranja_btn">Lista pranja</string>
    <string name="izvod_zarade">Izvod zarade</string>
    <string name="promeni_slova">Promeni font</string>
    <string name="promeni_pozadinu">Promeni pozadinu</string>
    <string name="plava_boja">Plava</string>
    <string name="podesavanja">Podešavanja</string>
    <string name="casual_font">Casual font</string>
    <string name="cursive_font">Cursive</string>
    <string name="monospace_font">Monospace</string>
    <string name="unesi_reg_oznaku">Unesite registarsku oznaku:</string>
    <string name="izaberite_vrstu_posla">Izaberite vrstu posla:</string>
    <string name="unesite_cenu_posla">Unesite cenu posla:</string>
    <string name="sacuvaj">Sačuvaj</string>
    <string name="ok">Ok</string>
    <string name="otkazi">Otkaži</string>
    <string name="din">din.</string>
    <string name="uspešno_sačuvano">Uspešno sačuvano!</string>
    <string name="nije_uspešno_sačuvano">Nije uspešno sačuvano. Pokušajte ponovo!</string>

    <string-array name="tip_vozila">
        <item>Auto</item>
        <item>Karavan</item>
        <item>Džip</item>
        <item>Motor</item>
    </string-array>

    <string-array name="vrste_pranja">
        <item>Komplet pranje bez voska.</item>
        <item>Komplet pranje sa voskom.</item>
        <item>Unutrašnje pranje.</item>
        <item>Spoljašnje pranje.</item>
        <item>Puškiranje.</item>
    </string-array>
</resources>
