<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    tools:context="com.example.bojan.despotapp.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:padding="20dp"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center_horizontal"
        android:text="@string/title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/novo_pranje_btn"
            android:background="@drawable/buttons_skin"
            android:layout_marginBottom="20dp"
            android:id="@+id/id_newWashBtn"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lista_pranja_btn"
            android:background="@drawable/buttons_skin"
            android:layout_marginBottom="25dp"
            android:id="@+id/id_washListBtn"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/izvod_zarade"
            android:background="@drawable/buttons_skin"
            android:id="@+id/id_salaryListBtn"/>

    </LinearLayout>

</LinearLayout>
