<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    android:layout_alignParentBottom="true"
    tools:context="com.example.bojan.despotapp.NewWashActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unesi_reg_oznaku"
        android:editable="false"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/izaberite_vrstu_posla"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/tip_vozila"
            android:id="@+id/id_typeVehicle">
        </android.support.v7.widget.AppCompatSpinner>

        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/vrste_pranja"
            android:id="@+id/id_chooseWash">
        </android.support.v7.widget.AppCompatSpinner>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/unesite_cenu_posla"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/id_price"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sačuvaj"
            android:background="@drawable/buttons_skin"/>
    </LinearLayout>

</LinearLayout>
